<resources>
    <string name="app_name">RickAndMortyApplication</string>

    <string name="alive">alive</string>
    <string name="unknown">unknown</string>

    <string name="error_to_load_results">Failed to load characters</string>
    <string name="error_to_load_episodes">Failed to load episodes</string>
    <string name="error_to_load_character_details">Failed to load character details</string>

    <string name="retry">RETRY</string>
    <string name="show_episodes">Show episodes</string>

    <string name="season_1">S01</string>
    <string name="season_2">S02</string>
    <string name="season_3">S03</string>
    <string name="season_4">S04</string>
    <string name="season_5">S05</string>

    <string name="location">Location</string>
    <string name="species">Species</string>
    <string name="status">Status</string>
</resources>